remove editor button & fix cut off top-right menu

--- a/src/frontend/components/clean.css
+++ b/src/frontend/components/clean.css
@@ -15,7 +15,8 @@
 #menuClassSubtext,
 #settingsPreset,
 #menuClassName,
-#menuClassIcn {
+#menuClassIcn,
+#editorBtnM {
   display: none !important;
 }
 
@@ -36,8 +37,4 @@
 
 #uiBase.onMenu #spectButton {
   top: 94%;
-}
-
-.headerBarRight {
-  right: -23px;
 }
